--- a/reto_2/style.css
+++ b/reto_2/style.css
@@ -1,7 +1,53 @@
 .container {
-    width: 100vw;
+    width: 100%;
+    max-width:1200px;
+    margin:0 auto;
     height: 100vh;
+}
+
+.grilla {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.grilla > div {
+    max-width: 300px;
+    padding: 25px 32px;
+    box-shadow: 0px 0px 4px rgba(0,0,0, 0.25);
+}
+
+.title{
+    font-family: Montserrat;
+font-size: 24px;
+font-weight: 600;
+line-height: 4¿36px;
+text-align: left;
+
+}
+.imagen{
+    width:100%;
+    max-width:150px;
+    object-fit:cover;
+    aspect-ratio: 1 / 1;
+}
+.descripcion{
+    font-family: "Open Sans";
+font-size: 18px;
+font-weight: 400;
+line-height: 32px;
+text-align: left;
+
+}
+
+.footer {
+    margin-top: auto;
+}
+.precio{
+    font-family: Righteous;
+font-size: 24px;
+font-weight: 400;
+line-height: 31.68px;
+text-align: left;
+
 }
